# not_a_practical_python

./: .gitignore  README.md  pyproject.toml
anagramm/: anagrams.py
search_poligram_spelss/: cprofile_test.py  load_dictinory.py  palindromes.py  palingrams.py
stupid-name-generator/: bar_graph_of_the_poor.py  pig_latin.py  pseudonyms.py
