[tool.poetry]
name = "not-a-practical-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "not_a_practical_python"}]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.17.3"
pydocstyle = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
